--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head><title>The Mango Effect</title></head>
 <body>
-  <h1>TEST</h1>
+  <h1 style="text-align:center">The Mango Effect</h1>
   <div id="media">
-     <h2>The Last Nerf Dart</h2>
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/YbYfFl7Gq0k">
+     <h2 style="text-align:center">The Last Nerf Dart</h2>
+    <iframe style="text-align:center" width="640" height="360" src="https://www.youtube.com/embed/YbYfFl7Gq0k">
     </iframe>
   </div>
 </body>
