css rename test

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1>The Mango Effect</h1>
   <div id="media">
      <p>The Last Nerf Dart</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </iframe>
   </div>
 </body>
