--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<head><title>The Mango Effect</title></head>
+<head>
+  <title>The Mango Effect</title>
+  <link href="main.css" type="text/css" rel="stylesheet">
+</head>
 <body>
   <h1>The Mango Effect</h1>
   <div id="media">
