--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>The Mango Effect</title>
   <link href="main.css" type="text/css" rel="stylesheet">
@@ -7,7 +8,8 @@
   <h1>The Mango Effect</h1>
   <div id="media">
      <p>The Last Nerf Dart</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </iframe>
   </div>
 </body>
+</html>
