--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h1>The Mango Effect</h1>
-  <div id="media">
-     <p>The Last Nerf Dart</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </iframe>
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="./media.html">Videos</a>
+  </nav>
+  <h1 id=title>The Mango Effect</h1>
+  <p>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
 </body>
 </html>
