--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+  <h2>The Mango Effect<h2>
   <nav>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
