--- a/media.html
+++ b/media.html
@@ -5,11 +5,13 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+  <h2>The Mango Effect</h2>
   <nav>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
+  <p>This page showcases all past videos.</p>
   <p id="videotitle">The Last Nerf Dart</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
