--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+<style>
+body {
+  background-color: #00ff88;
+}
+</style>
 <head>
   <title>The Mango Effect</title>
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h2>The Mango Effect<h2>
   <nav>
+    <p>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
