--- a/media.html
+++ b/media.html
@@ -5,8 +5,8 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h2>The Mango Effect</h2>
   <nav>
+    <p>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
