--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {
-  background-color: #00ff88;
-}
-</style>
 <head>
   <title>The Mango Effect</title>
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <nav>
-    <p>The Mango Effect</p>
+    <h2 id=title>The Mango Effect</h2>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
