--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
     <a href="./media.html">Videos</a>
   </nav>
   <p>This page showcases all past videos.</p>
-  <p id="videotitle">The Last Nerf Dart</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h5 id="videotitle">The Last Nerf Dart</h5>
+  <iframe id="videothumbnail" width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
