--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
-  <img src="./themangoeffectlogo.png">
+  <img src="./themangoeffectlogo.png" align="middle">
   <p>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
 </body>
