--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
-  <img src="./themangoeffectlogo.png" id=center>
+  <p id="aligncenter">
+    <img src="./themangoeffectlogo.png">
+  </p>
   <p>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
 </body>
