--- a/media.html
+++ b/media.html
@@ -6,9 +6,7 @@
 </head>
 <body>
   <nav>
-    <h2 id=title>The Mango Effect</h2>
-    <a href="./index.html">Home</a>
-    <a href="./media.html">Videos</a>
+    <h2 id=title>The Mango Effect</h2><a href="./index.html">Home</a><a href="./media.html">Videos</a>
   </nav>
   <p>This page showcases all past videos.</p>
   <h5 id="videotitle">The Last Nerf Dart</h5>
