--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <nav>
+  <nav id=nav>
     <h2 id=title>The Mango Effect</h2><a href="./index.html">Home</a><a href="./media.html">Videos</a>
   </nav>
   <p>This page showcases all past videos.</p>
