--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 </head>
 <body>
   <nav id=nav>
-    <h2 id=title>The Mango Effect</h2><a href="./index.html">Home</a><a href="./media.html">Videos</a>
+    <p id=title>The Mango Effect</p>
+    <a href="./index.html">Home</a>
+    <a href="./media.html">Videos</a>
   </nav>
   <p id="aligncenter">
     <img src="./themangoeffectlogo.png">
   </p>
-  <p>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
+  <p id=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
 </body>
 </html>
