--- a/media.html
+++ b/media.html
@@ -6,10 +6,14 @@
 </head>
 <body>
   <nav id=nav>
-    <h2 id=title>The Mango Effect</h2><a href="./index.html">Home</a><a href="./media.html">Videos</a>
+    <p id=title>The Mango Effect</p>
+    <a href="./index.html">Home</a>
+    <a href="./media.html">Videos</a>
   </nav>
-  <p>This page showcases all past videos.</p>
+  <p id="centered">This page showcases all past videos.</p>
   <h5 id="videotitle">The Last Nerf Dart</h5>
-  <iframe id="videothumbnail" width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p id="aligncenter">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
 </body>
 </html>
