--- a/media.html
+++ b/media.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <nav id=nav>
-    <p id=title>The Mango Effect</p>
+    <p>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
