--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <nav id=nav>
+  <nav class=nav>
     <p>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
-  <p id="aligncenter">
+  <p class="aligncenter">
     <img src="./themangoeffectlogo.png">
   </p>
-  <p id=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
+  <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
 </body>
 </html>
