--- a/media.html
+++ b/media.html
@@ -5,14 +5,14 @@
   <link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <nav id=nav>
+  <nav class=nav>
     <p>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./media.html">Videos</a>
   </nav>
-  <p id="centered">This page showcases all past videos.</p>
-  <h5 id="videotitle">The Last Nerf Dart</h5>
-  <p id="aligncenter">
+  <p class="centered">This page showcases all past videos.</p>
+  <h5 class="videotitle">The Last Nerf Dart</h5>
+  <p class="aligncenter">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 </body>
