--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
     <a href="./media.html">Videos</a>
   </nav>
   <p class="centered">This page showcases all past videos.</p>
-  <h5 class="videotitle">The Last Nerf Dart</h5>
+  <h5 class="videotitle, centered">The Last Nerf Dart</h5>
   <p class="aligncenter">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
