--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
 <body>
   <nav class=nav>
     <p>The Mango Effect</p>
-    <a href="./index.html">Home</a>
-    <a href="./media.html">Videos</a>
+    <a href="./home.html">Home</a>
+    <a href="./videos.html">Videos</a>
   </nav>
   <p class="aligncenter">
     <img src="./themangoeffectlogo.png">
