--- a/videos.html
+++ b/videos.html
@@ -7,8 +7,8 @@
 <body>
   <nav class=nav>
     <p>The Mango Effect</p>
-    <a href="./index.html">Home</a>
-    <a href="./media.html">Videos</a>
+    <a href="./home.html">Home</a>
+    <a href="./videos.html">Videos</a>
   </nav>
   <p class="centered">This page showcases all past videos.</p>
   <h5 class="videotitle, centered">The Last Nerf Dart</h5>
