--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
 <body>
   <nav class=nav>
     <p>The Mango Effect</p>
-    <a href="./home.html">Home</a>
+    <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
   </nav>
   <p class="centered">This page showcases all past videos.</p>
