--- a/videos.html
+++ b/videos.html
@@ -10,9 +10,9 @@
     <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
   </nav>
-  <p class="centered">This page showcases all past videos.</p>
+  <p class=centered>This page showcases all past videos.</p>
   <h5 class="videotitle, centered">The Last Nerf Dart</h5>
-  <p class="aligncenter">
+  <p class=aligncenter>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 </body>
