--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
   <nav class=nav>
-    <p>The Mango Effect</p>
+    <p class=dameron>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
   </nav>
-  <p class="aligncenter">
+  <p class=aligncenter>
     <img src="./themangoeffectlogo.png">
   </p>
   <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
