--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <nav class=nav>
-    <p>The Mango Effect</p>
+    <p class=dameron>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
   </nav>
