--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>The Mango Effect</title>
   <link href="main.css" type="text/css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="./themangoeffectwatermark.png"/>
 </head>
 <body>
   <nav class=nav>
