--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
   <title>Videos</title>
   <link href="main.css" type="text/css" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="./themangoeffectwatermark.png"/>
+  <link rel="shortcut icon" type="image/png" href="./themangoeffecticon.png"/>
 </head>
 <body>
   <nav class=nav>
