--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 </head>
 <body>
   <nav class=nav>
-    <p class=dameron>  The Mango Effect</p>
-    <a href="./index.html">  Home  </a>
-    <a href="./videos.html">  Videos  </a>
+    <p class=dameron>The Mango Effect</p>
+    <a href="./index.html">Home</a>
+    <a href="./videos.html">Videos</a>
   </nav>
   <p class=aligncenter>
     <img src="./themangoeffectlogo.png">
   </p>
   <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
+  <footer>
+    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1">Subscribe to The Mango Effect</a></p>
+  </footer> 
 </body>
 </html>
