--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Mango Effect</title>
+  <title>The Mango Effect: Home</title>
   <link href="main.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="./themangoeffecticon.png"/>
 </head>
 <body>
   <nav class=nav>
     <p class=dameron>The Mango Effect</p>
-    <a href="./index.html">Home</a>
+    <a class="active" href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
   </nav>
   <p class=aligncenter>
@@ -17,7 +17,7 @@
   <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
   <footer>
-    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1">Subscribe to The Mango Effect</a></p>
-  </footer> 
+    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect</a></p>
+  </footer>
 </body>
 </html>
