--- a/videos.html
+++ b/videos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Videos</title>
+  <title>The Mango Effect: Videos</title>
   <link href="main.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="./themangoeffecticon.png"/>
 </head>
@@ -9,12 +9,15 @@
   <nav class=nav>
     <p class=dameron>The Mango Effect</p>
     <a href="./index.html">Home</a>
-    <a href="./videos.html">Videos</a>
+    <a class="active" href="./videos.html">Videos</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
-  <h4 class="videotitle, centered">The Last Nerf Dart</h4>
+  <h4 class=videotitle>The Last Nerf Dart</h4>
   <p class=aligncenter>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
+  <footer>
+    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect</a></p>
+  </footer>
 </body>
 </html>
