--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p class=dameron>The Mango Effect</p>
     <a class="active" href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
+    <a href="./contact.html">Contact</a>
   </nav>
   <p class=aligncenter>
     <img src="./themangoeffectlogo.png">
@@ -17,7 +18,7 @@
   <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
   <footer>
-    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect</a></p>
+    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
   </footer>
 </body>
 </html>
