--- a/videos.html
+++ b/videos.html
@@ -10,6 +10,7 @@
     <p class=dameron>The Mango Effect</p>
     <a href="./index.html">Home</a>
     <a class="active" href="./videos.html">Videos</a>
+    <a href="./contact.html">Contact</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
   <h4 class=videotitle>The Last Nerf Dart</h4>
@@ -17,7 +18,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YbYfFl7Gq0k" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
   <footer>
-    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect</a></p>
+    <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
   </footer>
 </body>
 </html>
