--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,12 @@
     <a class="active" href="./contact.html">Contact</a>
   </nav>
   <p class=centered>For business or feedback purposes, contact The Mango Effect here.</p>
-  <form name="formEmail" method="post" action="mailto:themangoeffect@protonmail.ch">
-    <input type="text" id="name" name="name" placeholder="Your Name">
-    <input type="text" id="email" name="email" placeholder="Your Email">
-    <textarea id="subject" name="subject" placeholder="Write anything." style="height:180px"></textarea>
-    <input type="submit" value="Submit" onclick="sendMail(document.formEmail)">
-  </form>
+  <p class=centered>
+    <a href = "mailto: themangoeffect@protonmail.ch">themangoeffect@protonmail.ch</a>
+  </p>
+  <p class=aligncenter>
+    <img src="./themangoeffectlogo.png">
+  </p>
   <footer>
     <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
   </footer>
