--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <nav class=nav>
-    <p class=dameron>The Mango Effect</p>
+    <img src="./TitleMango.png">
     <a class="active" href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
