--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <nav class=nav>
-    <p class=dameron>The Mango Effect</p>
+    <img src="./TitleMango.png">
     <a href="./index.html">Home</a>
     <a class="active" href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
