--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Mango Effect: Contact</title>
+  <title>The Mango Effect: Donate</title>
   <link href="main.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="./themangoeffecticon.png"/>
 </head>
@@ -10,13 +10,16 @@
     <img src="./TitleMango.png">
     <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
-    <a class="active" href="./contact.html">Contact</a>
-    <a href="./donate.html">Donate</a>
+    <a href="./contact.html">Contact</a>
+    <a class="active" href="./donate.html">Donate</a>
   </nav>
-  <p class=centered>For business or feedback purposes, contact The Mango Effect here.</p>
-  <p class=centered>
-    <a href = "mailto: themangoeffect@protonmail.ch">themangoeffect@protonmail.ch</a>
-  </p>
+  <p class=centered>If you want to support the channel, donate with Bitcoin, Litecoin or Dogecoin! It helps out a lot.</p>
+  <h4 class=centered>BTC address</h4>
+  <p class=centered>bc1qcvt6tm6j4ndd74ljqg5jg3ap2m5dlarf3g7pxs</p>
+  <h4 class=centered>LTC address</h4>
+  <p class=centered>Lanhm8dNi9HmQtKpUCBadPBNksYkTAdRzY</p>
+  <h4 class=centered>DOGE address</h4>
+  <p class=centered>DRtDuGPxkMEPpxFc9oyTrzLcmr9GHkE7CG</p>
   <p class=aligncenter>
     <img src="./themangoeffectlogo.png">
   </p>
