--- a/videos.html
+++ b/videos.html
@@ -11,6 +11,7 @@
     <a href="./index.html">Home</a>
     <a class="active" href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
+    <a href="./donate.html">Donate</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
   <h4 class=videotitle>The Last Nerf Dart</h4>
