--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a class="active" href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
+    <a href="./donate.html">Donate</a>
   </nav>
   <p class=aligncenter>
     <img src="./themangoeffectlogo.png">
