--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <a href = "mailto: themangoeffect@protonmail.ch">themangoeffect@protonmail.ch</a>
   </p>
   <p class=aligncenter>
-    <img src="./themangoeffectlogo.png">
+    <img src="./themangoeffectitle.png">
   </p>
   <footer>
     <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
