--- a/donate.html
+++ b/donate.html
@@ -21,7 +21,7 @@
   <h4 class=centered>DOGE address</h4>
   <p class=centered>DRtDuGPxkMEPpxFc9oyTrzLcmr9GHkE7CG</p>
   <p class=aligncenter>
-    <img src="./themangoeffectitle.png">
+    <img src="./mangoeffectitle.png">
   </p>
   <footer>
     <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
