--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="./donate.html">Donate</a>
   </nav>
   <p class=aligncenter>
-    <img src="./themangoeffectitle.png">
+    <img src="./mangoeffectitle.png">
   </p>
   <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
   </div>
