blog demo and cleanup

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
   <p class=aligncenter>
     <img src="./mangoeffectitle.png">
   </p>
-  <p class=centered>Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
+  <p class=centered style="padding-bottom:20px">Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
+
+  <div class=blogpost>
+    <h3 class=blogposttitle>Title</h3><h5 class=blogpostdate>Date</h5>
+    <p class=blogpostpost>long text blog post text text text text text</p>
   </div>
+
   <footer>
     <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
   </footer>
