--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   </p>
   <p class=centered style="padding-bottom:20px">Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
 
+  <!--Blog Section-->
   <div class=blogpost>
-    <h3 class=blogposttitle>Title</h3><h5 class=blogpostdate>Date</h5>
-    <p class=blogpostpost>long text blog post text text text text text</p>
+    <h3 class=blogposttitle>The Last Nerf Dart released</h3><h5 class=blogpostdate>February 13, 2021</h5>
+    <p class=blogpostpost>The Last Nerf Dart, a video I made a year ago that took 2 months to make, was just posted yesterday. It can be found on the <a href="./videos.html">videos page</a>, or simply watch it <a href="https://www.youtube.com/embed/YbYfFl7Gq0k" target="_blank">here</a>. Videos are expected to be posted every Friday, and on Thursday on the website. </p>
   </div>
-
+  <!--Blog Section-->
   <footer>
     <p><a href="https://www.youtube.com/channel/UCoz3x6c1Z9effBWsP49pgUw?sub_confirmation=1" target="_blank">Subscribe to The Mango Effect YouTube channel!</a></p>
   </footer>
