--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>New Domain</h3><h5 class=blogpostdate>February 14, 2021</h5>
+    <p class=blogpostpost>Yesterday, I bought the domain <a href="https://www.themangoeffect.com">. Now it works as the domain for the website.</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>The Last Nerf Dart released</h3><h5 class=blogpostdate>February 13, 2021</h5>
     <p class=blogpostpost>The Last Nerf Dart, a video I made a year ago that took 2 months to make, was just posted yesterday. It can be found on the <a href="./videos.html">videos page</a>, or simply watch it <a href="https://www.youtube.com/embed/YbYfFl7Gq0k" target="_blank">here</a>. Videos are expected to be posted every Friday, and on Thursday on the website. </p>
   </div>
