--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!--Blog Section-->
   <div class=blogpost>
     <h3 class=blogposttitle>New Domain</h3><h5 class=blogpostdate>February 14, 2021</h5>
-    <p class=blogpostpost>Yesterday, I bought the domain <a href="https://www.themangoeffect.com">. Now it works as the domain for the website.</p>
+    <p class=blogpostpost>Yesterday, I bought the domain <a href="https://www.themangoeffect.com">themangoeffect.com</a>. Now it works as the domain for the website.</p>
   </div>
 
   <div class=blogpost>
