--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>New Video</h3><h5 class=blogpostdate>February 14, 2021</h5>
+    <p class=blogpostpost>Just made a new video showcasing the website. Check it out in the <a href="./videos.html">videos page</a>!</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>New Domain</h3><h5 class=blogpostdate>February 14, 2021</h5>
     <p class=blogpostpost>Yesterday, I bought the domain <a href="https://www.themangoeffect.com">themangoeffect.com</a>. Now it works as the domain for the website.</p>
   </div>
