--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>Next Video</h3><h5 class=blogpostdate>February 14, 2021</h5>
+    <p class=blogpostpost>The next video posted will be posted on YouTube on Friday and on this website on Thursday. It'll be a short video, but still a cool one. Keep an eye out for it!</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>New Video</h3><h5 class=blogpostdate>February 14, 2021</h5>
     <p class=blogpostpost>Just made a new video showcasing the website. Check it out in the <a href="./videos.html">videos page</a>!</p>
   </div>
