--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>New Video Posted</h3><h5 class=blogpostdate>February 18, 2021</h5>
+    <p class=blogpostpost>It's Thursday! A new video was just posted. Check it out in <a href="./videos.html">videos</a>! It'll be public on YouTube tomorrow.</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>Next Video</h3><h5 class=blogpostdate>February 14, 2021</h5>
     <p class=blogpostpost>The next video posted will be posted on YouTube on Friday and on this website on Thursday. It'll be a short video, but still a cool one. Keep an eye out for it!</p>
   </div>
