--- a/videos.html
+++ b/videos.html
@@ -14,6 +14,10 @@
     <a href="./donate.html">Donate</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
+  <h4 class=videotitle>I found an Alien Gun!</h4>
+  <p class=aligncenter>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6teRQI12Sfk" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <h4 class=videotitle>NEW WEBSITE</h4>
   <p class=aligncenter>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EGNzXTGK39M" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
