--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>I Found an Alien Gun</h3><h5 class=blogpostdate>February 19, 2021</h5>
+    <p class=blogpostpost>The newest video was just released on YouTube. Check it out <a href="https://www.youtube.com/watch?v=6teRQI12Sfk">here</a>!</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>New Video Posted</h3><h5 class=blogpostdate>February 18, 2021</h5>
     <p class=blogpostpost>It's Thursday! A new video was just posted. Check it out in <a href="./videos.html">videos</a>! It'll be public on YouTube tomorrow.</p>
   </div>
