blog post style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>New Style</h3><h5 class=blogpostdate>February 21, 2021</h5>
+    <p class=blogpostpost>New style for blog posts, now with a nice shadow to make them more readable. Also, the next video has been made and will release on Thursday on the website.</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>I Found an Alien Gun</h3><h5 class=blogpostdate>February 19, 2021</h5>
     <p class=blogpostpost>The newest video was just released on YouTube. Check it out <a href="https://www.youtube.com/watch?v=6teRQI12Sfk">here</a>!</p>
   </div>
