--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>Early Video</h3><h5 class=blogpostdate>February 22, 2021</h5>
+    <p class=blogpostpost>The next video will be releasing early, tomorrow morning on YouTube and the website. Another video will be uploaded Friday.</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>New Style</h3><h5 class=blogpostdate>February 21, 2021</h5>
     <p class=blogpostpost>New style for blog posts, now with a nice shadow to make them more readable. Also, the next video has been made and will release on Thursday on the website.</p>
   </div>
