moved logo to the right

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <nav class=nav>
-    <img src="./TitleMango.png">
+    <img class=alignright src="./TitleMango.png">
     <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
     <a class="active" href="./contact.html">Contact</a>
