new video released

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
   <!--Blog Section-->
   <div class=blogpost>
+    <h3 class=blogposttitle>New Video!</h3><h5 class=blogpostdate>February 28, 2021</h5>
+    <p class=blogpostpost>A new video was just released! Check it out on the <a href="./videos.html">videos page</a>, it is short but took a few days to do. Hope you enjoy it!</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>Early Video</h3><h5 class=blogpostdate>February 22, 2021</h5>
     <p class=blogpostpost>The next video will be releasing early, tomorrow morning on YouTube and the website. Another video will be uploaded Friday.</p>
   </div>
