--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <a href="./videos.html">Videos</a>
     <a class="active" href="./contact.html">Contact</a>
     <a href="./donate.html">Donate</a>
+    <a href="./repo/repo.html">Repo</a>
   </nav>
   <p class=centered>For business or feedback purposes, contact The Mango Effect here.</p>
   <p class=centered>
