--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
     <a href="./donate.html">Donate</a>
+    <a href="./repo/repo.html">Repo</a>
   </nav>
   <p class=aligncenter>
     <img src="./mangoeffectitle.png">
