--- a/videos.html
+++ b/videos.html
@@ -12,6 +12,7 @@
     <a class="active" href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
     <a href="./donate.html">Donate</a>
+    <a href="./repo/repo.html">Repo</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
   <h4 class=videotitle>Iron Cat</h4>
