--- a/repo/repo.html
+++ b/repo/repo.html
@@ -16,10 +16,10 @@
   </nav>
   <p class=centered>Here is the The Mango Effect Cydia Repository.</p>
 
-  <div class="container">
+  <div style="text-align: center;background-color:#00EEAA;padding:5px;padding-bottom:10px;border-radius:25px;width:6%;
+    margin-left: auto;margin-right: auto;margin-bottom: 25px;box-shadow:0px 1px 5px black;" class="container">
   	<div class="well">
-  		<p><span class="text-primary"><b>The Mango Effect</span></b> is a Cydia repository.</p>
-  		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://themangoeffect.github.io/repo/">Add to Cydia</a>
+  		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://themangoeffect.github.io/repo/">Add to Cydia</a>
   	</div>
   </div>
 
