--- a/repo/repo.html
+++ b/repo/repo.html
@@ -14,7 +14,7 @@
     <a href="../donate.html">Donate</a>
     <a class="active" href="./repo/repo.html">Repo</a>
   </nav>
-  <p class=centered>Here is the The Mango Effect Cydia Repository.</p>
+  <p class=centered>Here is the The Mango Effect Cydia Repository. If you have a jailbroken iPhone, you can use this button to add the repository to Cydia.</p>
 
   <div style="text-align: center;background-color:#00EEAA;padding:5px;padding-bottom:10px;border-radius:25px;width:6%;
     margin-left: auto;margin-right: auto;margin-bottom: 25px;box-shadow:0px 1px 5px black;" class="container">
