--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Mango Effect: Contact</title>
+  <title>The Mango Effect: Donate</title>
   <link href="main.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="./themangoeffecticon.png"/>
 </head>
@@ -10,14 +10,14 @@
     <img class=alignright src="./TitleMango.png">
     <a href="./index.html">Home</a>
     <a href="./videos.html">Videos</a>
-    <a class="active" href="./contact.html">Contact</a>
+    <a href="./contact.html">Contact</a>
     <a href="./donate.html">Donate</a>
-    <a href="./games.html">Games</a>
+    <a class="active" href="./games.html">Games</a>
   </nav>
-  <p class=centered>For business or feedback purposes, contact The Mango Effect here.</p>
-  <p class=centered>
-    <a href = "mailto: themangoeffect@protonmail.ch">themangoeffect@protonmail.ch</a>
-  </p>
+  <p class=centered>Here are some games I developed.</p>
+
+  <iframe src="https://itch.io/embed/984044?bg_color=0a0a0a&amp;fg_color=eeeeee&amp;link_color=990707&amp;border_color=6b0303" width="552" height="167" frameborder="0"><a href="https://themangoeffect.itch.io/rhythm-of-the-knight">Rhythm of the Knight by The Mango Effect</a></iframe>
+
   <p class=aligncenter>
     <img src="./mangoeffectitle.png">
   </p>
