--- a/videos.html
+++ b/videos.html
@@ -12,8 +12,13 @@
     <a class="active" href="./videos.html">Videos</a>
     <a href="./contact.html">Contact</a>
     <a href="./donate.html">Donate</a>
+    <a href="./games.html">Games</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
+  <h4 class=videotitle>Rhythm of the Knight Release</h4>
+  <p class=aligncenter>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/kAC7Osvb2oc" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <h4 class=videotitle>Iron Cat</h4>
   <p class=aligncenter>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/2Hl_FfC1MAE" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
