--- a/games.html
+++ b/games.html
@@ -15,9 +15,9 @@
     <a class="active" href="./games.html">Games</a>
   </nav>
   <p class=centered>Here are some games I developed.</p>
-
+<p class=aligncenter>
   <iframe src="https://itch.io/embed/984044?bg_color=0a0a0a&amp;fg_color=eeeeee&amp;link_color=990707&amp;border_color=6b0303" width="552" height="167" frameborder="0"><a href="https://themangoeffect.itch.io/rhythm-of-the-knight">Rhythm of the Knight by The Mango Effect</a></iframe>
-
+</p>
   <p class=aligncenter>
     <img src="./mangoeffectitle.png">
   </p>
