--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <p class=centered style="padding-bottom:20px">Welcome to the website of The Mango Effect. Here you can get updates for future videos.</p>
 
   <!--Blog Section-->
+
+  <div class=blogpost>
+    <h3 class=blogposttitle>New Videos</h3><h5 class=blogpostdate>April 11, 2021</h5>
+    <p class=blogpostpost>New videos were released! A video trailer for a game a friend and I have been working on, and a new VFX video! Check them out.</p>
+  </div>
+
   <div class=blogpost>
     <h3 class=blogposttitle>New Video!</h3><h5 class=blogpostdate>February 28, 2021</h5>
     <p class=blogpostpost>A new video was just released! Check it out on the <a href="./videos.html">videos page</a>, it is short but took a few days to do. Hope you enjoy it!</p>
