--- a/videos.html
+++ b/videos.html
@@ -15,6 +15,12 @@
     <a href="./games.html">Games</a>
   </nav>
   <p class=centered>This page showcases all past videos.</p>
+
+
+  <h4 class=videotitle>Sorcery Fight</h4>
+  <p class=aligncenter>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CUCDUvjrrHM" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <h4 class=videotitle>Rhythm of the Knight Release</h4>
   <p class=aligncenter>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/kAC7Osvb2oc" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
