--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Mango Effect: Donate</title>
+  <title>The Mango Effect: Games</title>
   <link href="main.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="./themangoeffecticon.png"/>
 </head>
