--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <!--Blog Section-->
 
   <div class=blogpost>
+    <h3 class=blogposttitle>New Game</h3><h5 class=blogpostdate>April 26, 2021</h5>
+    <p class=blogpostpost>A new game was released, check it out in the <a href="./games.html">games page</a>! A new update to Rhythm of the Knight was also released.</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>New Videos</h3><h5 class=blogpostdate>April 11, 2021</h5>
     <p class=blogpostpost>New videos were released! A video trailer for a game a friend and I have been working on, and a new VFX video! Check them out.</p>
   </div>
