--- a/games.html
+++ b/games.html
@@ -16,6 +16,9 @@
   </nav>
   <p class=centered>Here are some games I developed.</p>
 <p class=aligncenter>
+  <iframe src="https://itch.io/embed/1125007?bg_color=57646a&amp;fg_color=ffffff&amp;link_color=ff0940&amp;border_color=000000" width="552" height="167" frameborder="0"><a href="https://themangoeffect.itch.io/robot-thrown-away">Robot Thrown Away by The Mango Effect</a></iframe>
+</p>
+<p class=aligncenter>
   <iframe src="https://itch.io/embed/1106290?bg_color=ff0e0e&amp;link_color=000000&amp;border_color=000000" width="552" height="167" frameborder="0"><a href="https://themangoeffect.itch.io/the-robot-virus">The Robot Virus by The Mango Effect</a></iframe>
 </p>
 <p class=aligncenter>
