--- a/videos.html
+++ b/videos.html
@@ -17,6 +17,10 @@
   <p class=centered>This page showcases all past videos.</p>
 
 
+  <h4 class=videotitle>Robot Thrown Away Release</h4>
+  <p class=aligncenter>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1wd_QjMnc1g" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <h4 class=videotitle>The Robot Virus Release</h4>
   <p class=aligncenter>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/JZCqXlLGmgw" frameborder="1" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
