--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <!--Blog Section-->
 
   <div class=blogpost>
+    <h3 class=blogposttitle>New Games Released</h3><h5 class=blogpostdate>July 21, 2021</h5>
+    <p class=blogpostpost>Some new games were released, you can check them out on the games tab. New videos are coming soon!.</p>
+  </div>
+
+  <div class=blogpost>
     <h3 class=blogposttitle>New Game</h3><h5 class=blogpostdate>April 26, 2021</h5>
     <p class=blogpostpost>A new game was released, check it out in the <a href="./games.html">games page</a>! A new update to Rhythm of the Knight was also released.</p>
   </div>
